--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-    <meta name="description" content="完全無料・登録不要・クレジットカード不要のAI株式診断サービス。AIが株式市場を分析し、詳細なレポートを数秒で提供。投資判断はご自身の責任で。情報提供のみで投資助言ではありません。" />
-    <meta name="keywords" content="株式分析,AI診断,無料,投資情報,株価,テクニカル分析,登録不要" />
+    <meta name="description" content="わずか3秒で完了するAI株式分析。リアルタイムデータと最新AI技術で迅速な投資判断をサポート。完全無料・登録不要で今すぐ利用可能。" />
+    <meta name="keywords" content="高速AI分析,3秒診断,リアルタイム株価,迅速判断,即時分析,時短投資,AI株式診断" />
     <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="AI株式診断サービス - 完全無料・登録不要" />
-    <meta property="og:description" content="完全無料のAI株式分析サービス。登録不要・クレジットカード不要で今すぐ利用可能。情報提供のみで投資助言ではありません。" />
+    <meta property="og:title" content="3秒AI株式診断 - 超高速で銘柄を分析" />
+    <meta property="og:description" content="わずか3秒のAI分析で投資判断をサポート。リアルタイムデータによる高速株式診断サービス。" />
     <meta property="og:type" content="website" />
-    <title>AI株式診断サービス - 完全無料・登録不要・カード不要の株式分析</title>
+    <title>3秒AI株式診断 - 超高速銘柄分析で投資判断をサポート</title>
   </head>
   <body>
     <div id="root"></div>
