--- a/index.html
+++ b/index.html
@@ -4,16 +4,86 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Primary Meta Tags -->
+    <title>AI株式診断 - わずか3秒で銘柄分析 | 無料・登録不要</title>
+    <meta name="title" content="AI株式診断 - わずか3秒で銘柄分析 | 無料・登録不要" />
+    <meta name="description" content="最新AI技術でわずか3秒の高速株式診断。リアルタイムデータ分析で投資判断をサポート。完全無料・登録不要で今すぐ利用可能。日本株・米国株対応。" />
+    <meta name="keywords" content="AI株式診断,株式分析,銘柄診断,投資判断,株価分析,リアルタイム株価,無料株式診断,AI投資,機械学習,投資支援ツール,日本株,米国株" />
+    <meta name="author" content="AI株式診断" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <link rel="canonical" href="https://japanaistock.jp/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://japanaistock.jp/" />
+    <meta property="og:title" content="AI株式診断 - わずか3秒で銘柄分析 | 無料・登録不要" />
+    <meta property="og:description" content="最新AI技術でわずか3秒の高速株式診断。リアルタイムデータ分析で投資判断をサポート。完全無料・登録不要で今すぐ利用可能。" />
+    <meta property="og:site_name" content="AI株式診断" />
+    <meta property="og:locale" content="ja_JP" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://japanaistock.jp/" />
+    <meta name="twitter:title" content="AI株式診断 - わずか3秒で銘柄分析 | 無料・登録不要" />
+    <meta name="twitter:description" content="最新AI技術でわずか3秒の高速株式診断。リアルタイムデータ分析で投資判断をサポート。完全無料・登録不要で今すぐ利用可能。" />
+
+    <!-- Additional SEO -->
+    <meta name="language" content="Japanese" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="rating" content="general" />
+    <meta name="distribution" content="global" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Rajdhani:wght@300;400;500;600;700&family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-    <meta name="description" content="わずか3秒で完了するAI株式分析。リアルタイムデータと最新AI技術で迅速な投資判断をサポート。完全無料・登録不要で今すぐ利用可能。" />
-    <meta name="keywords" content="高速AI分析,3秒診断,リアルタイム株価,迅速判断,即時分析,時短投資,AI株式診断" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:title" content="3秒AI株式診断 - 超高速で銘柄を分析" />
-    <meta property="og:description" content="わずか3秒のAI分析で投資判断をサポート。リアルタイムデータによる高速株式診断サービス。" />
-    <meta property="og:type" content="website" />
-    <title>3秒AI株式診断 - 超高速銘柄分析で投資判断をサポート</title>
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "AI株式診断",
+      "description": "最新AI技術でわずか3秒の高速株式診断。リアルタイムデータ分析で投資判断をサポート。",
+      "url": "https://japanaistock.jp/",
+      "applicationCategory": "FinanceApplication",
+      "operatingSystem": "All",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "JPY"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "1250"
+      },
+      "featureList": [
+        "わずか3秒の高速AI分析",
+        "リアルタイムデータ取得",
+        "完全無料・登録不要",
+        "日本株・米国株対応",
+        "投資判断サポート"
+      ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "AI株式診断",
+      "url": "https://japanaistock.jp/",
+      "logo": "https://japanaistock.jp/vite.svg",
+      "sameAs": [],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer support",
+        "url": "https://japanaistock.jp/contact"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
